<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_lifecycle_manager</name>
  <version>0.0.0</version>
  <description>rqt_lifecycle_manager provides GUI plugin for visulazing lifecycle node state and change it</description>
  <maintainer email="vishnu.pbhat93@gmail.com">ipa-vsp</maintainer>
  <license>BSD</license>

  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
