<package format="2">
  <name>rqt_lifecycle_manager</name>
  <version>0.0.0</version>
  <description>rqt_lifecycle_manager provides GUI plugin for visulazing lifecycle node state and change it</description>

  <maintainer email="vishnu.pbhat93@gmail.com">Vishnu</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org</url>
  <url type="repository">https://github.com/ipa-vsp/rqt_lifecycle_manager</url>
  <url type="bugtracker">https://github.com/ipa-vsp/rqt_lifecycle_manager/issues</url>

  <author email="vishnu.pbhat93@gmail.com">Vishnu</author>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend version_gte="1.1.2">qt_dotgraph</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>python3-pydot</exec_depend>
  <exec_depend>python3-pil</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
